ME_QKART_BACKEND_MODULE_TEST

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=8082
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=240
 JWT_REFRESH_EXPIRATION_DAYS=30
-MONGODB_URL=mongodb://127.0.0.1:27017/qkart
+MONGODB_URL=mongodb+srv://aditya_amaiya:test@qkart-node.dktrs.mongodb.net/qkart?retryWrites=true&appName=qkart-node
